--- a/backend/package.json
+++ b/backend/package.json
@@ -29,11 +29,15 @@
   "dependencies": {
     "@fastify/cors": "^11.1.0",
     "@fastify/static": "^8.3.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/uuid": "^10.0.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.6.1",
     "drizzle-orm": "^0.44.7",
     "fastify": "^5.6.1",
     "fastify-raw-body": "^5.0.0",
+    "jsonwebtoken": "^9.0.3",
     "nodemailer": "^7.0.10",
     "pg": "^8.16.3",
     "stripe": "^19.1.0",
