--- a/backend/.env.example
+++ b/backend/.env.example
@@ -36,3 +36,9 @@ SMTP_FROM=noreply@yourdomain.com
 NODE_ENV=development
 ADMIN_API_KEY=
 ENABLE_SWAGGER=true
+
+# Admin Authentication (JWT)
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=changeme_secure_password
+JWT_SECRET=your_jwt_secret_minimum_32_characters_long_random_string
+JWT_EXPIRY=1h
