--- a/backend/.env.example
+++ b/backend/.env.example
@@ -38,7 +38,21 @@ ADMIN_API_KEY=
 ENABLE_SWAGGER=true
 
 # Admin Authentication (JWT)
+# Username for admin login access to client management endpoints
 ADMIN_USERNAME=admin
+
+# Password for admin authentication
+# For development: use plain text password
+# For production: use bcrypt hashed password (e.g., $2b$10$...)
+# Generate hash: bcrypt.hash('your_password', 10)
 ADMIN_PASSWORD=changeme_secure_password
+
+# Secret key for signing JWT tokens
+# MUST be minimum 32 characters long for security
+# Generate secure random string: openssl rand -base64 32
 JWT_SECRET=your_jwt_secret_minimum_32_characters_long_random_string
+
+# JWT token expiration time (optional, defaults to "1h")
+# Supported formats: "1h", "30m", "7d", "24h"
+# Shorter expiry = more secure but requires more frequent re-authentication
 JWT_EXPIRY=1h
