docs: update environment setup and consolidate findings

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,6 @@
 # Stripe Configuration
 STRIPE_SECRET_KEY=sk_test_...
+# STRIPE_PUBLISHABLE_KEY is for frontend use (not read by the API).
 STRIPE_PUBLISHABLE_KEY=pk_test_...
 STRIPE_WEBHOOK_SECRET=whsec_...
 
